# vectordb-lite

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py
tests/: test_api.py  test_index.py  test_persistence.py  test_similarity.py
vectordb/: __init__.py  api.py  index.py  persistence.py  similarity.py
